--- a/Manual/main.tex
+++ b/Manual/main.tex
@@ -125,5 +125,5 @@ The final characerization measurement, shown in Fig.\,\ref{fig:long observation}
 \section{Outlook \& Conclusion}
 In summary, this work shows a design, realisation and characterization of a cost-effective plant-growth facility with integrated monitoring capabilities. We show the data acquisition, handling and visualisation scheme of the facility and demonstrate a couple of characterizing measurements that are important for its application. Importantly, all the software associated to the growth-facility, such as the ESP-32 firmware and the data acquisition scripts are freely available on the GitHub development platform (\url{https://github.com/JCVis/weatherstation}) and will be updated as improvements are made to the growth facility and as inspiration for other designs. Future work will include more characterizations of the growing facility containing plants, the subsequent growing of plants from seeds and various plant VOC emission studies are planned with this plant-growing facility.
 \section*{Acknowledgements}
-We would like to thoroughly thank the Max Planck Institute for Chemistry in Mainz, and specifically Prof. Jonathan Williams, Joseph Byron and the mechanical workshop of the MPIC for funding and fabricating the plant-growing facility.
+We would like to thoroughly thank the Max Planck Institute for Chemistry in Mainz, and specifically Prof. Jonathan Williams, Joseph Byron and the mechanical workshop of the MPIC for funding and fabricating the plant-growing facility. We would also like to thank Prof. Dmitry Budker, in whose group this work has been carried out.
 \end{document}
